[package]
name = "genkey"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"]}
rand = "0.8.5"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
